--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6355,7 +6355,7 @@ only screen and (max-width: 767px) {
 
 .page-banner-section {
     min-height: 645px;
-    background-image: url(../images/page-banner.jpg);
+    background-image: url(../images/TE505.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -6396,7 +6396,7 @@ only screen and (max-width: 767px) {
     position: absolute;
     left: 0;
     top: 0;
-    background: rgba(5, 65, 218, 0.7);
+    background: rgba(39, 44, 56, 0.7);
     width: 100%;
     height: 100%;
     z-index: -1;
