--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3067,9 +3067,9 @@ only screen and (max-width: 1199px) {
     font-family: "Archivo", sans-serif;
     font-weight: 700;
     text-transform: uppercase;
-    color: #1a0a1e;
+    color: #1a0a1e !important;
     position: relative;
-    z-index: 1;
+    z-index: -1;
 }
 
 .meeta-hero-section-5 .hero-content .title-wrap .title::before {
@@ -3083,6 +3083,7 @@ only screen and (max-width: 1199px) {
     width: 100%;
     height: 100%;
     z-index: -1;
+    color: black;
 }
 
 .meeta-hero-section-5 .hero-content .title-wrap .sub-title {
